k3s_cluster/base/private/code/odysseus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: private
  labels:
    app: private-code-odysseus
spec:
  type: ClusterIP
  selector:
    app: private-code-odysseus
  ports:
    - name: web
      protocol: TCP
      port: 4430
      targetPort: 7000
