k3s_cluster/base/private/code/odysseus/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: private
  labels:
    app: private-odysseus
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`odysseus.code.private.home`)
      # middlewares:
      #   - name: private-middleware-auth-authentik
      services:
        - name: private-code-odysseus-service
          port: 4430
  # tls: {}
